# PuzzlesCode

./: LICENSE  README.md  pyproject.toml  requirements.txt
Josephus_Problem/: josephus_problem_solution.py
Minimum_Three_Points/: minimum_three_points.md  minimum_three_points_solution.md  minimum_three_points_solution.py
Perimeter_Rectangle/: perimeter_rectangle_solution.md  perimeter_rectangle_solution.py
puzzles/: josephus_problem.md  perimeter_rectangle.md
solutions/: josephus_problem_solution.md  josephus_problem_solution.py  minimum_three_points_solution.md  minimum_three_points_solution.py
